# composer-alloc-polars

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: release-testpypi.yml  release.yml
composer_alloc_polars/: __init__.py
scripts/: local_cibw.sh
src/: expressions.rs  lib.rs
