[build-system]
requires = ["maturin>=1.5,<2"]
build-backend = "maturin"

[project]
name = "composer-alloc-polars"
version = "0.1.1"
requires-python = ">=3.13"
dependencies = ["polars>=1.36.1"]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[tool.maturin]
bindings = "pyo3"
module-name = "composer_alloc_polars._lib"
features = ["pyo3/extension-module"]

[tool.cibuildwheel]
build = "cp313-* cp314-*"
skip = "pp*"
manylinux-x86_64-image = "manylinux2014"
manylinux-aarch64-image = "manylinux2014"
